--- a/index.htm
+++ b/index.htm
@@ -28,7 +28,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand topnav" href="https://www.instagram.com/vincent_zhang96/" target="_blank">Xin Tang</a>
+        <a class="navbar-brand topnav" href="https://www.linkedin.com/in/xin-tang789/" target="_blank">Xin Tang</a>
       </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
